# test-py-rust

./: .gitignore  Cargo.toml  README.md  bundle.ps1  main.py
src/: lib.rs
